--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-between flex-grow-1 pe-3">
             <li class="nav-item flex-grow-1 text-center nav-item-line">
-              <a class="nav-link" href="inovations.html">Иновации</a>
+              <a class="nav-link" href="Inovations.html">Иновации</a>
             </li>
             <li class="nav-item flex-grow-1 text-center nav-item-line">
               <a class="nav-link" href="https://www.decathlon.bg/7900-rezervni-chasti-i-poddrazhka">Резервни части и услуги</a>
